Prevent search bar from ever overlapping minicart icon/text

--- a/app/design/frontend/Travers/default/Magento_Theme/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Theme/styles/module/_common.scss
@@ -228,7 +228,7 @@ body {
         max-width: none;
 
         .algolia-search-block {
-            flex-basis: 48%;
+            flex-basis: 46%;
         }
 
         .minicart-wrapper {
